# swagger/openapi.yaml
@@ -57,6 +57,13 @@ paths:
   /feedback/unpin/{feedbackId}/{userId}:
     $ref: './paths/feedback.yaml#/~1feedback~1unpin~1{feedbackId}~1{userId}'
 
+  /feedback:
+    $ref: './paths/feedback1.yaml#/~1feedback'
+
+  /feedback/{feedbackId}/content:
+    $ref: './paths/feedback1.yaml#/~1feedback~1{feedbackId}~1content'
+
+
   # 메인 > 일정
   /calendar/month:
     $ref: './paths/calendar.yaml#/~1calendar~1month'
@@ -143,6 +150,9 @@ components:
       $ref: './schemas/Feedback1.yaml#/CreateFeedbackRequest'
     CreateFeedbackResponse:
       $ref: './schemas/Feedback1.yaml#/CreateFeedbackResponse'
+
+    UpdateFeedbackContentRequest:
+      $ref: './schemas/Feedback1.yaml#/UpdateFeedbackContentRequest'
 
     # 일정
     calendar:
